--- a/index.css
+++ b/index.css
@@ -91,8 +91,21 @@ font-weight: 450;
 .wiki {
   color: #7c7a7a;
 }
+
+.githubIconColor {
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(225deg) brightness(105%) contrast(105%);
+}
+
+.icons {
+  vertical-align: middle;
+  fill: white;
+  width: 2.0rem;
+  height: 2.0rem;
+}
+
 #telegram {
   box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
+  display: inline-block;
   border-radius: 30px;
   align-items: center;
   font-size: 1.6rem;
@@ -104,6 +117,7 @@ font-weight: 450;
 }
 #github {
   box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
+  display: inline-block;
   border-radius: 30px;
   align-items: center;
   font-size: 1.6rem;
