--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
   text-decoration: none;
 }
 .caves {
-  background-image: url(/caves.png);
+  background-image: url(/assets/caves.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -92,16 +92,36 @@ font-weight: 450;
   color: #7c7a7a;
 }
 
+.BlobSvg {
+position: absolute;
+z-index: -1;
+}
+
+#BlobHeaderDiv {
+
+}
+
 .githubIconColor {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(225deg) brightness(105%) contrast(105%);
 }
 
-.icons {
+.telegramIconColor {
+  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(225deg) brightness(105%) contrast(105%);
+}
+
+#github img {
   vertical-align: middle;
+  transition: transform 0.4s;
   fill: white;
+  margin-right: 5;
   width: 2.0rem;
   height: 2.0rem;
 }
+
+#github:hover img {
+  transform: translate(0, -0.4rem);
+}
+
 
 #telegram {
   box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
@@ -110,11 +130,26 @@ font-weight: 450;
   align-items: center;
   font-size: 1.6rem;
   padding: 1.5rem 2rem;
-  background-color: #29b6f6;
+  background-color: black;
   text-decoration: none;
-  color: #bebebe;
+  color: white;
   margin: 20px;
 }
+
+#telegram img {
+  vertical-align: middle;
+  transition: transform 0.4s;
+  fill: white;
+  margin-right: 5;
+  width: 2.0rem;
+  height: 2.0rem;
+}
+
+#telegram:hover img {
+  transform: translate(0, -0.4rem);
+}
+
+
 #github {
   box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
   display: inline-block;
@@ -127,6 +162,7 @@ font-weight: 450;
   color: white;
   margin: 20px;
 }
+
 .downbutton {
   box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
   border-radius: 30px;
