--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
   text-decoration: none;
 }
 .caves {
-  background-image: url(/assets/caves.png);
+  background-image: url(assets/caves.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -70,7 +70,6 @@ body {
 #desc {
 background-color: #171717;
 font-size: 24px;
-padding: 3rem;
 color: #adadaa;
 text-align: center;
 font-weight: 450;
@@ -89,80 +88,34 @@ font-weight: 450;
   padding: 1.82rem;
 }
 .wiki {
-  color: #7c7a7a;
-}
-
-.BlobSvg {
-position: absolute;
-z-index: -1;
-}
-
-#BlobHeaderDiv {
-
+  color: #585858;
 }
 
 .githubIconColor {
   filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(225deg) brightness(105%) contrast(105%);
 }
-
-.telegramIconColor {
-  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(225deg) brightness(105%) contrast(105%);
+#github {
+  box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 0.596);
+  display: inline-block;
+  border-radius: 24px;
+  font-size: 1.4rem;
+  padding: 1.3rem 2rem;
+  background-color: black;
+  text-decoration: none;
+  color: white;
+  margin: 25px;
 }
-
 #github img {
-  vertical-align: middle;
+  vertical-align: text-bottom;
   transition: transform 0.4s;
   fill: white;
   margin-right: 5;
-  width: 2.0rem;
-  height: 2.0rem;
+  width: 2.3rem;
+  height: 1.8rem;
 }
-
 #github:hover img {
   transform: translate(0, -0.4rem);
 }
-
-
-#telegram {
-  box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
-  display: inline-block;
-  border-radius: 30px;
-  align-items: center;
-  font-size: 1.6rem;
-  padding: 1.5rem 2rem;
-  background-color: black;
-  text-decoration: none;
-  color: white;
-  margin: 20px;
-}
-
-#telegram img {
-  vertical-align: middle;
-  transition: transform 0.4s;
-  fill: white;
-  margin-right: 5;
-  width: 2.0rem;
-  height: 2.0rem;
-}
-
-#telegram:hover img {
-  transform: translate(0, -0.4rem);
-}
-
-
-#github {
-  box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
-  display: inline-block;
-  border-radius: 30px;
-  align-items: center;
-  font-size: 1.6rem;
-  padding: 1.5rem 2rem;
-  background-color: black;
-  text-decoration: none;
-  color: white;
-  margin: 20px;
-}
-
 .downbutton {
   box-shadow: 0.2rem 0.2rem 10px rgba(0, 0, 0, 1);
   border-radius: 30px;
