--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
   text-decoration: none;
 }
 .caves {
-  background-image: url(assets/caves.png);
+  background-image: url(assets/caves2.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
